Fix big gap beneath header on pages with no meta
Fixes https://github.com/seanh/jekyll-theme-seanh/issues/26

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -157,7 +157,7 @@ body {
 }
 
 .page-header__title {
-  margin-bottom: 13px;
+  margin-bottom: 0;
 }
 
 .content .posts-list {
